--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
            
         </style>
         <body>
+            <a href="image.html">first image</a>
+
             <p class="ok"></p>
             <div class="container">  
                
